--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@floating-ui/react": "^0.27.13",
     "@hookform/resolvers": "^5.1.1",
     "@prisma/client": "^6.11.1",
     "@radix-ui/react-accordion": "^1.2.11",
@@ -42,7 +43,21 @@
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tabler/icons-react": "^3.34.0",
+    "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-table": "^8.21.3",
+    "@tiptap/extension-highlight": "^3.0.1",
+    "@tiptap/extension-image": "^3.0.1",
+    "@tiptap/extension-link": "^3.0.1",
+    "@tiptap/extension-subscript": "^3.0.1",
+    "@tiptap/extension-superscript": "^3.0.1",
+    "@tiptap/extension-task-item": "^3.0.1",
+    "@tiptap/extension-task-list": "^3.0.1",
+    "@tiptap/extension-text-align": "^3.0.1",
+    "@tiptap/extension-typography": "^3.0.1",
+    "@tiptap/extension-underline": "^3.0.1",
+    "@tiptap/pm": "^3.0.1",
+    "@tiptap/react": "^3.0.1",
+    "@tiptap/starter-kit": "^3.0.1",
     "better-auth": "^1.2.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -73,6 +88,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.5",
+    "sass": "^1.89.2",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.5",
     "typescript": "^5"
