--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@tiptap/starter-kit": "^3.0.1",
     "better-auth": "^1.2.12",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
